# get

./: .gitignore  CMakeLists.txt  TODO.md  curl.cmake  gtest.cmake
.github/scripts/: gcovr.sh
.github/workflows/: cmake-multi-platform.yml
include/: config.in.h
source/: hello.cpp  main.cpp
tests/: a_test.cpp
